# src/http_server.go
@@ -1,8 +1,10 @@
 package main
 
 import (
+	"fmt"
 	"gitlab.at.ispras.ru/openstack_bigdata_tools/spark-openstack/src/database"
 	"gitlab.at.ispras.ru/openstack_bigdata_tools/spark-openstack/src/utils"
+	"io"
 	"log"
 	"net/http"
 	"os"
@@ -25,7 +27,15 @@ func main() {
 	gc.SetLogger(grpcClientLogger)
 	gc.SetConnection(addressAnsibleService, addressDBService)
 
-	httpServerLogger := log.New(os.Stdout, "HTTP_SERVER: ", log.Ldate|log.Ltime)
+	// create a multiwriter which writes to stout and a file simultaneously
+	logFile, err := os.OpenFile("logs/http_server.log", os.O_CREATE | os.O_APPEND | os.O_RDWR, 0666)
+	if err != nil {
+		fmt.Println("Can't create a log file. Exit...")
+		os.Exit(1)
+	}
+	mw := io.MultiWriter(os.Stdout, logFile)
+
+	httpServerLogger := log.New(mw, "HTTP_SERVER: ", log.Ldate|log.Ltime)
 
 	hS := handlers.HttpServer{Gc: gc, Logger: httpServerLogger, Db: database.CouchDatabase{VaultCommunicator: &vaultCommunicator}}
 
@@ -40,6 +50,7 @@ func main() {
 	router.GET("/projects/:projectIdOrName/clusters", hS.ClustersGet)
 	router.POST("/projects/:projectIdOrName/clusters", hS.ClusterCreate)
 	router.GET("/projects/:projectIdOrName/clusters/:clusterIdOrName", hS.ClustersGetByName)
+	router.GET("/projects/:projectIdOrName/clusters/:clusterIdOrName/status", hS.ClustersStatusGetByName)
 	router.PUT("/projects/:projectIdOrName/clusters/:clusterIdOrName", hS.ClustersUpdate)
 	router.DELETE("/projects/:projectIdOrName/clusters/:clusterIdOrName", hS.ClustersDelete)
 
@@ -57,6 +68,12 @@ func main() {
 
 	// swagger UI route
 	router.ServeFiles("/api/*filepath", http.Dir("./swaggerui"))
+
+	// logs routes
+	router.Handle("GET", "/logs/ansible_output", hS.ServeAnsibleOutput)
+	router.Handle("GET", "/logs/ansible_service", hS.ServeAnsibleServiceLog)
+	router.Handle("GET", "/logs/http_server", hS.ServeHttpServerLog)
+
 
 	httpServerLogger.Print("Server starts to work")
 	httpServerLogger.Fatal(http.ListenAndServe(":8080", router))
